# rcp-gmail

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  plugin.toml
includes/: form.html
src/: lib.rs
