[package]
name = "rcp-gmail"
version = "0.1.0"
edition = "2024"
description = "Shared library for sending mail via Gmail"
keywords = ["rustic", "plugin"]
categories = ["rustic"]
repository = "https://github.com/mrhdias/rcp-gmail"
authors = ["Henrique Dias <mrhdias@gmail.com>"]
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
futures-util = "0.3.31"
hyper = "1.6.0"
lettre = { version = "0.11.15", features = ["native-tls"] }
multer = "3.1.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
toml = "0.8.20"
